fixed overflow scroll issue for generative art page on osx

--- a/content/assets/css/pagestyle.css
+++ b/content/assets/css/pagestyle.css
@@ -136,7 +136,7 @@ a:hover
 
 #content
 {
-	overflow-y: auto;
+	overflow-y: hidden;
 	max-width: 90%;
 	width: 850px;
 	text-align: left;
